<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.manfredi.android.graficoscomgooglecharts.CaloriasActivity">

    <TextView
        android:id="@+id/tv_cafe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/cafe_manha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_cafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_cafe"
        android:ems="10"
        android:hint="@string/calorias_refeicao"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_lanche_manha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_cafe"
        android:text="@string/lanche_manha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_lanche_manha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_lanche_manha"
        android:ems="10"
        android:hint="@string/calorias_refeicao"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_almoco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_lanche_manha"
        android:text="@string/almoco"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_almoco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_almoco"
        android:ems="10"
        android:hint="@string/calorias_refeicao"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_lanche_tarde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_almoco"
        android:text="@string/lanche_tarde"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_lanche_tarde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_lanche_tarde"
        android:ems="10"
        android:hint="@string/calorias_refeicao"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_jantar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_lanche_tarde"
        android:text="@string/jantar"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_jantar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_jantar"
        android:ems="10"
        android:hint="@string/calorias_refeicao"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_lanche_noite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_jantar"
        android:text="@string/lanche_noite"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_lanche_noite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_lanche_noite"
        android:ems="10"
        android:hint="@string/calorias_refeicao"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_gerar_graficos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_lanche_noite"
        android:hint="@string/btn_gerar_graficos"
        android:onClick="btnGerarGraficosOnClick" />

</RelativeLayout>
